uupdate model classes with entities and db properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#DB config
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokeapi
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+#Show all jpa commands use to create the tables
+spring.jpa.show-sql=true
+
+#Every time jpa runs uses update method
+spring.jpa.hibernate.ddl-auto=update
